--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <h1>Привет, мир!</h1>
     <p>Этот сайт работает.</p>
     <p>А теперь еще и с CI/CD!</p>
+    <p>...на этот раз точно работает!</p>
 </body>
 </html>
