--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <p>Этот сайт работает.</p>
     <p>А теперь еще и с CI/CD!</p>
     <p>...на этот раз точно работает!</p>
+    <p>.............точно!!!</p>
 </body>
 </html>
