--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <h1>Привет, мир!</h1>
+    <h1>Это я!</h1>
     <p>Этот сайт работает.</p>
     <p>А теперь еще и с CI/CD!</p>
     <p>...на этот раз точно работает!</p>
