--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <p>Этот сайт работает.</p>
     <p>А теперь еще и с CI/CD!</p>
     <p>...на этот раз точно работает!</p>
-    <p>...........точно!!!</p>
+    <p>...........точно!!!!</p>
 </body>
 </html>
