--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <title>Привет!</title>
 </head>
 <body>
-    <h1>Привет, мир!</h1>
+    <h1>Привет, планета!</h1>
     <h1>Это я!</h1>
     <p>Этот сайт работает.</p>
     <p>А теперь еще и с CI/CD!</p>
     <p>...на этот раз точно работает!</p>
+    <p>...........точно!!!!</p>
     <p>...........точно!!!!</p>
 </body>
 </html>
